Added simple color animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,4 @@ https://developer.mozilla.org/en-US/docs/Learn/WebGL/By_example
 <app-detect-web-gl></app-detect-web-gl>
 <app-clearing-with-colors></app-clearing-with-colors>
 <app-clearing-by-clicking></app-clearing-by-clicking>
+<app-simple-color-animation></app-simple-color-animation>
